# Data-Revival-Tool

./: .gitignore  CMakeLists.txt  README.md
include/core/: FileEngine.h  MetadataRecoveryEngine.h
include/metadata/: AudioMetadata.h  DocumentMetadata.h  FileMetadata.h  ImageMetadata.h  MetadataFactory.h  VideoMetadata.h
include/recovery/: devices.h  smart_info.h
include/ui/: MetadataRecoveryGUI.h  UIHelpers.h  metadataPanel.h  recoveryPanel.h
include/utils/: SizeFormatter.h  device_physical.h
src/: main.cpp
src/core/: FileEngine.cpp  MetadataRecoveryEngine.cpp
src/metadata/: AudioMetadata.cpp  DocumentMetadata.cpp  FileMetadata.cpp  ImageDeleteMetada.cpp  ImageDeleteMetadata.cpp  ImageMetadata.cpp  MetadataFactory.cpp  VideoMetadata.cpp
src/recovery/: devices.cpp  smart_info.cpp
src/ui/: MetadataPanel.cpp  MetadataRecoveryGUI.cpp  RecoveryPanel.cpp
src/utils/: SizeFormatter.cpp  device_physical.cpp
tools/: build-gtk.bat
